# NANYA_project

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/BaseNode/: AutoDockStatus.h  CurrentController.h  DigitLEDControl.h  FlagReport.h  FlagReportStamped.h  GetObstacleDistance.h  GetObstacleDistanceRequest.h  GetObstacleDistanceResponse.h  IMUReport.h  IrDockReport.h  LEDReport.h  LEDReportRequest.h  LEDReportResponse.h  MagnetReport.h  PIC32EmergencySetting.h  PingData.h  PingDataStamped.h  RFIDReport.h  RGBLEDControl.h  RGBLEDControlStamped.h  RealSpeedData.h  SetObstacleDistance.h  SetObstacleDistanceRequest.h  SetObstacleDistanceResponse.h  SonicReport.h
devel/include/amcl/: AMCLConfig.h
devel/include/auto_charge_service/: aurco_info.h  auto_charge_srv.h  (+2 more)
src/BaseNode/: CMakeLists.txt  package.xml
src/Battery/: CMakeLists.txt
src/M03_navigation/: CMakeLists.txt  auto_charge_server.bash  close_roscore.bash  gmapping.bash  go.mod  go.sum  main.go  main_non_camera_ver.go  navigation.bash  ros_control.bash  ros_control_laser.bash  save_map.bash  send_multi_goals.bash  show_robot_pose.bash
src/auto_charge_service/: CMakeLists.txt
src/rplidar/laser/: CMakeLists.txt  package.xml
src/rplidar/laser/cfg/: c01_2017_laser_config.yaml  c01_2018_laser_config.yaml  m01_d_laser_config.yaml  m01_d_v2_laser_config.yaml
src/rplidar/laser/include/: reflector_tf.h
src/rplidar/laser/launch/: gmapping.launch  hector_mapping.launch  hokuyo.launch  laser_imu.launch  laser_scan_matcher.launch  reflector_tf.launch  rosbag.launch  rplidar_s1_.launch  rviz.launch  scan_filter.launch  sick_tim551_2050001.launch  sick_tim571.launch
src/rplidar/laser/launch/transform/: c01_2018_transform.launch  c01_slim_transform.launch  m01_d_transform.launch  m01_d_v2_transform.launch
src/rplidar/laser/nodes/: laser_conversion.py  pose_to_csv.py  rplidar_filter.py  scan_matcher_to_imu.py
src/rplidar/laser/rviz/: log.rviz
src/rplidar/laser/shared/: laser_detection.launch  laser_detection_start_ver3.docx  mapping.launch
src/rplidar/laser/src/: scan_detection.cpp  scan_filter.cpp
src/simple_navigation_goals/: CMakeLists.txt  package.xml
src/tf_broadcaster/: CMakeLists.txt
src/tf_broadcaster/src/: tf_broadcaster.cpp
(+427 files in other folders)
